# 104-aijob

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  my-cron  pyproject.toml
104/: app.py  fetch_jobs.py  fetch_jobs_detail.py  filter_jobs.py  main.py  taiwan_500.csv  top_500.py
104/utils/: __init__.py  connect_db.py  get_jobs.py  grid_display.py  list_jobs.py  top_500.py
cron/: my-cron
